--- a/backend/.env
+++ b/backend/.env
@@ -1,9 +1,5 @@
 PORT=3001
-DB_CONNECTION=mongodb://localhost:27017/bibliomeandb
-<<<<<<< HEAD
+DB_CONNECTION=mongodb://localhost:27017/biblioMEANdb
 SK_JWT=RATLAB
-=======
-SK_JWT=SSBM2202
->>>>>>> 3587bccf01e32e727069e1f9f8f5298a063cc0b9
 
 
